# prelegal

./: .gitignore  Dockerfile  LICENSE  README.md  catalog.json  docker-compose.yml
.claude/: CLAUDE.MD
.claude/skills/openrouter/: SKILL.md
backend/: pyproject.toml
backend/app/: auth.py  database.py  document_types.py  main.py  models.py
backend/app/routers/: auth_router.py  chat_router.py  document_router.py  template_router.py
frontend/: package-lock.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/signin/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/: ChatPanel.tsx  DocumentCreator.tsx  DocumentPreview.tsx  MyDocumentsModal.tsx  NdaCreator.tsx  NdaForm.tsx  NdaPreview.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: api.ts  documentTypes.ts  generateDocument.ts  generateNda.ts
scripts/: start-linux.sh  start-windows.ps1  stop-windows.ps1
templates/: LICENSE
